# PourDecisions

./: CMakeLists.txt  README.md  custom.json  index.html
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml
Cards/: challenges.json  dares.json  forfeits.json  group.json  handicap.json  memory.json  nsfw.json  sfw.json  truth.json  whatIf.json  wyr.json
Data/: settings.json
src/: AudioManager.cpp  Game.cpp  Game.h  SpriteTransition.cpp  SpriteTransition.h  index.html  main.cpp
src/GameObjects/: CMakeLists.txt  Card.cpp  Card.h  ForfeitCard.cpp  ForfeitCard.h  PlayerBoardDisplay.cpp  PlayerBoardDisplay.h
src/Managers/: AudioManager.cpp  AudioManager.h  CMakeLists.txt
src/Screens/: CMakeLists.txt  Credits.cpp  Credits.h  ForfeitScreen.cpp  ForfeitScreen.h  HTPScreen.cpp  HTPScreen.h  LoadingScreen.cpp  LoadingScreen.h  MainGame.cpp  MainGame.h  OptionsScreen.cpp  OptionsScreen.h  PlayerSetup.cpp  PlayerSetup.h
src/Screens/Menus/: GameOver.cpp  GameOver.h  PauseMenu.cpp  PauseMenu.h
src/Utils/: CMakeLists.txt  CustomMessageBox.cpp  CustomMessageBox.h  GradientBackground.cpp  GradientBackground.h  GradientText.cpp  GradientText.h  InputField.cpp  RoundedRectangle.cpp  RoundedRectangle.h  UniversalSleep.h
src/Utils/JSON/: CMakeLists.txt  CardImporter.cpp  CardImporter.h  CardParser.cpp  CardParser.h  ForfeitImporter.cpp  ForfeitImporter.h  ForfeitParser.cpp  ForfeitParser.h  JsonParser.cpp  JsonParser.h  Settings.cpp  Settings.h  SettingsParser.cpp  SettingsParser.h
src/Utils/Widgets/: Button.cpp  Button.h  CMakeLists.txt  CheckBox.cpp  CheckBox.h  DropdownMenu.cpp  DropdownMenu.h  GrowFadeText.cpp  GrowFadeText.h  InputField.cpp  InputField.h  SolidButton.cpp  SolidButton.h  TextGrid.cpp  TextGrid.h  VolumeSlider.cpp  VolumeSlider.h
src/VisualAddons/: CMakeLists.txt  Confetti.cpp  Confetti.h  GradientText.cpp  RockingSprite.cpp  RockingSprite.h  SpinWheel.cpp  SpinWheel.h  SpriteTransition.cpp  SpriteTransition.h
